# oop_lab2

./: CMakeLists.txt  application.cpp  application.h  array.cpp  array.h  complex.cpp  complex.h  number.h
